Fix problem with \localtableofcontentswithrelat...
When I run xetex on doc.tex the output tells me that
\localtableofcontentswithrelativedepth is undefined.  I added a couple
of lines to each input file to compensate for that.

--- a/src/usr_02.tex
+++ b/src/usr_02.tex
@@ -2,8 +2,10 @@
 This chapter provides just enough information to edit a file with Vim.  Not
 well or fast, but you can edit.  Take some time to practice with these
 commands, they form the base for what follows.
-\localtableofcontentswithrelativedepth{+1}
-
+%\localtableofcontentswithrelativedepth{+1} % I couldn't get this to work TMC
+\etocsetnexttocdepth{2} % This produces the same result TMC
+\etocsettocstyle{\subsection*{Contents}}{}
+\localtableofcontents
 \subsection{Running Vim for the First Time}
 To start Vim, enter this command:
 
