--- a/src/usr_41.tex
+++ b/src/usr_41.tex
@@ -3,7 +3,10 @@
 The Vim script language is used for the startup vimrc file, syntax files, and many other things.
 This chapter explains the items that can be used in a Vim script.
 There are a lot of them, thus this is a long chapter.
-\localtableofcontentswithrelativedepth{+1}
+%\localtableofcontentswithrelativedepth{+1} % I couldn't get this to work TMC
+\etocsetnexttocdepth{2} % This produces the same result TMC
+\etocsettocstyle{\subsection*{Contents}}{}
+\localtableofcontents
 \subsection{Introduction}
 \label{vim-script-intro}
 \label{script}
