--- a/src/intro.tex
+++ b/src/intro.tex
@@ -1,7 +1,10 @@
 \section{00. Introduction to Vim}
 \label{ref}
 \label{reference}
-\localtableofcontentswithrelativedepth{+1}
+%\localtableofcontentswithrelativedepth{+1} % I couldn't get this to work TMC
+\etocsetnexttocdepth{2} % This produces the same result TMC
+\etocsettocstyle{\subsection*{Contents}}{}
+\localtableofcontents
 \subsection{Introduction}
 \label{intro}
 Vim stands for Vi IMproved.
