--- a/src/usr_04.tex
+++ b/src/usr_04.tex
@@ -2,7 +2,10 @@
 This chapter shows you several ways of making corrections and moving text
 around.  It teaches you the three basic ways to change text: operator-motion,
 Visual mode and text objects.
-\localtableofcontentswithrelativedepth{+1}
+%\localtableofcontentswithrelativedepth{+1} % I couldn't get this to work TMC
+\etocsetnexttocdepth{2} % This produces the same result TMC
+\etocsettocstyle{\subsection*{Contents}}{}
+\localtableofcontents
 \subsection{Operators and motions}
 
 In chapter 2 you learned the "\texttt{x}" command to delete a single character.
