--- a/src/usr_06.tex
+++ b/src/usr_06.tex
@@ -4,7 +4,10 @@ Black and white text is boring.  With colors your file comes to life.  This
 not only looks nice, it also speeds up your work.  Change the colors used for
 the different sorts of text.  Print your text, with the colors you see on the
 screen.
-\localtableofcontentswithrelativedepth{+1}
+%\localtableofcontentswithrelativedepth{+1} % I couldn't get this to work TMC
+\etocsetnexttocdepth{2} % This produces the same result TMC
+\etocsettocstyle{\subsection*{Contents}}{}
+\localtableofcontents
 \subsection{Switching it on}
 
 It all starts with one simple command:
