--- a/src/usr_21.tex
+++ b/src/usr_21.tex
@@ -2,7 +2,10 @@
 This chapter goes into mixing the use of other programs with Vim.
 Either by executing program from inside Vim or by leaving Vim and coming back later.
 Furthermore, this is about the ways to remember the state of Vim and restore it later.
-\localtableofcontentswithrelativedepth{+1}
+%\localtableofcontentswithrelativedepth{+1} % I couldn't get this to work TMC
+\etocsetnexttocdepth{2} % This produces the same result TMC
+\etocsettocstyle{\subsection*{Contents}}{}
+\localtableofcontents
 \subsection{Suspend and resume}
 Like most Unix programs Vim can be suspended by pressing CTRL-Z.
 This stops Vim and takes you back to the shell it was started in.
