--- a/src/usr_28.tex
+++ b/src/usr_28.tex
@@ -2,7 +2,10 @@
 Structured text can be separated in sections.  And sections in sub-sections.
 Folding allows you to display a section as one line, providing an overview.
 This chapter explains the different ways this can be done.
-\localtableofcontentswithrelativedepth{+1}
+%\localtableofcontentswithrelativedepth{+1} % I couldn't get this to work TMC
+\etocsetnexttocdepth{2} % This produces the same result TMC
+\etocsettocstyle{\subsection*{Contents}}{}
+\localtableofcontents
 \subsection{What is folding?}
 Folding is used to show a range of lines in the buffer as a single line on the screen.
 Like a piece of paper which is folded to make it shorter:
