--- a/src/usr_30.tex
+++ b/src/usr_30.tex
@@ -2,7 +2,10 @@
 Vim has various commands that aid in writing computer programs.
 Compile a program and directly jump to reported errors.
 Automatically set the indent for many languages and format comments.
-\localtableofcontentswithrelativedepth{+1}
+%\localtableofcontentswithrelativedepth{+1} % I couldn't get this to work TMC
+\etocsetnexttocdepth{2} % This produces the same result TMC
+\etocsettocstyle{\subsection*{Contents}}{}
+\localtableofcontents
 \subsection{Compiling}
 Vim has a set of so called "\texttt{quickfix}" commands.
 They enable you to compile a program from within Vim and then go through the errors generated and fix them (hopefully).
