--- a/src/usr_44.tex
+++ b/src/usr_44.tex
@@ -3,7 +3,10 @@
 Vim comes with highlighting for a couple of hundred different file types.
 If the file you are editing isn't included, read this chapter to find out how to get this type of file highlighted.
 Also see |\texttt{:h :syn-define}| in the reference manual.
-\localtableofcontentswithrelativedepth{+1}
+%\localtableofcontentswithrelativedepth{+1} % I couldn't get this to work TMC
+\etocsetnexttocdepth{2} % This produces the same result TMC
+\etocsettocstyle{\subsection*{Contents}}{}
+\localtableofcontents
 \subsection{Basic syntax commands}
 Using an existing syntax file to start with will save you a lot of time.
 Try finding a syntax file in \texttt{\$VIMRUNTIME/syntax} for a language that is similar.
