--- a/src/usr_10.tex
+++ b/src/usr_10.tex
@@ -444,7 +444,7 @@ For example, make a Visual block selection that includes the word "long" in the 
     short 
     Any other long line 
 
-              .... selected block
+              ^^^^ selected block
 \end{Verbatim}
 
 Now use the command "\texttt{Ivery <Esc>}".
